--- a/Content/WhyPickPeachtree.htm
+++ b/Content/WhyPickPeachtree.htm
@@ -4,29 +4,35 @@
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>All About San Diego</h1>
-        <p>San&#160;Diego is in California, USA.</p>
-        <h2>History</h2>
+        <h1>Why Pick Peachtree City? </h1>
+        <p>Peachtree City is in Georgia, USA.</p>
+        <h2>&#160;</h2>
+        <p>
+            <img src="Resources/Images/PTC/Map.png" />
+        </p>
+        <h2>Why Pick Peachtree?</h2>
         <MadCap:dropDown>
             <MadCap:dropDownHead>
-                <MadCap:dropDownHotspot>History</MadCap:dropDownHotspot>
+                <MadCap:dropDownHotspot>Why peachtree</MadCap:dropDownHotspot>
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>San Diego was incorporated in 1850, the same year California became a state. However, before that, it had been part of the Spanish Empire, First Mexican Empire, and Mexican United States.</p>
-                <p>Today, San Diego is the second-largest city in California and the eighth-largest city in the United States. It is known as "America's Finest City," partially because of its year-round warm climate and beautiful beaches. San Diego has a large defense and military sector, a thriving tourism industry, and many major research and manufacturing companies.</p>
+                <p>Peachtree City is the perfect combination of everything you could ever want! Beautiful scenery, 4 seasons, and good ole' Southern Hospitality is what we are known and proud of. Read through this document and see why you should Pick Peachtree City, GA&#160;as your next place of residence!</p>
                 <h1>Details</h1>
-                <p>San Diego has a nice climate. Read about it here.</p>
+                <p>Peachtree City has all 4 seasons. Read about it here.</p>
                 <p MadCap:conditions="Default.PrintOnly">Clip this coupon for a discount.</p>
                 <p MadCap:conditions="Default.ScreenOnly">Show this page on your smartphone for a discount.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <h2>Climate</h2>
+        <h2>4Seasons(not related to the hotel...)</h2>
         <MadCap:dropDown>
             <MadCap:dropDownHead>
                 <MadCap:dropDownHotspot>Climate</MadCap:dropDownHotspot>
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Although it is located along the Pacific Ocean, San Diego County doesn't have the constant, uniform weather you may associate with coastal California. San Diego County is very large. It is so large that it spans several microclimates with different kinds of weather. You can even see the different areas if you look at a picture of San Diego.</p>
+                <p>Summer:</p>
+                <p>Fall:</p>
+                <p>Winter:</p>
+                <p>Spring:</p>
                 <p>
                     <img src="Resources/Images/sandiego.png" alt="" title="" />
                 </p>
