--- a/Content/Dining.htm
+++ b/Content/Dining.htm
@@ -14,6 +14,9 @@
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>Lebanese Restaurant</p>
+                <p>
+                    <img src="Resources/Images/PTC/Beirut.jpg" />
+                </p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <h2 MadCap:conditions="Default.PrintOnly">Grazing Here</h2>
@@ -23,6 +26,9 @@
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>Barn-inspired eatery &amp; bar serving burgers from grass-fed beef &amp;&#160;featuring regular live music.</p>
+                <p>
+                    <img src="Resources/Images/PTC/Graze.jpg" style="width: 614px;height: 408px;" />
+                </p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <h2 MadCap:conditions="Default.PrintOnly">The Georgia Shrimp Company</h2>
@@ -32,6 +38,9 @@
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>Southern-tinged seafood dishes served in a low-key space with live music &amp; a bar with a tapas menu.</p>
+                <p>
+                    <img src="Resources/Images/PTC/Shrimp.jpg" style="width: 575px;height: 380px;" />
+                </p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
     </body>
