--- a/Content/GolfCarts.htm
+++ b/Content/GolfCarts.htm
@@ -7,7 +7,7 @@
         <h1>Golf Carts?</h1>
         <p>Yes, golf carts.... a lot of them actually!</p>
         <p>
-            <img src="Resources/Images/PTC/Bridge.jpg" />
+            <img src="Resources/Images/PTC/Bridge.jpg" style="width: 560px;height: 420px;" />
         </p>
         <MadCap:dropDown>
             <MadCap:dropDownHead MadCap:conditions="Default.ScreenOnly">
@@ -16,6 +16,9 @@
                 <p>100-mile network of multi-use paths for pedestrians, cyclists, and golf carts. Residents can go from neighborhood to shopping centers, schools, and parks through the wooded scenery that makes Peachtree City special.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <h2 MadCap:conditions="Default.PrintOnly">&#160;</h2>
+        <h2 MadCap:conditions="Default.PrintOnly">
+            <object src="https://www.youtube.com/watch?v=uJltcP2ckWE" style="width: 560px;height: 315px;">
+            </object>
+        </h2>
     </body>
 </html>
