--- a/Content/PTCAttractions.htm
+++ b/Content/PTCAttractions.htm
@@ -1,22 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>San Diego Attractions</h1>
-        <p>There are many places to visit in San Diego. Three of these are Balboa Park, the San Diego Zoo, and Petco Park.</p>
-        <p>Balboa Park is a 1200-acre park in the middle of downtown San Diego. Inside the park are gardens, walking paths, and more than a dozen museums. Every year the park hosts hundreds of events, including concerts, marathons and races, festivals and parades, and guest speakers.</p>
+        <h1>Peachtree City&#160;Attractions</h1>
+        <p>There are many places to visit in Peachtree City. Three of these are Lake Peachtree, the Fredrick Brown Jr. Amphitheater, and Flat Creek Nature Area.</p>
+        <p>&#160;</p>
+        <p>Lake Peachtree is located in the heart of Peachtree City. Being that it is located in the heart of the city It makes it hard to miss for both visitors and residence alike. For years this lake has and continues to be an important landmark for the community.</p>
+        <p>In fact, it has been over 50 years since the lake was created by damming up flat creek. The dam was officially completed and the lake began to fill in 1957. Back then Peachtree City was just getting started. In fact, it wasn't even chartered yet. That happened on March 9, 1959.</p>
         <p>
-            <img src="Resources/Images/balboapark.png" alt="" title="" />
+            <img src="Resources/Images/PTC/Lake Peachtree.jpg" style="width: 460px;height: 306px;" />
         </p>
-        <p>The San Diego Zoo was founded in 1916 and is located inside of Balboa Park. It is home to more than 3700 rare and endangered animals, and more than 700,000 exotic plants. Among the animals at the zoo are giant pandas, gorillas, koalas, and jaguars. </p>
+        <p>The Fred was initially built in 1976 under the McIntosh Trail Arts Council as a 1,600-seat outdoor facility to show “The McIntosh Trail,” a play written by Dr. Kermit H. Hunter that told the story of the death of Chief William McIntosh.</p>
+        <p>The City of Peachtree City purchased the amphitheater in 1977. Up until the mid 80’s, the amphitheater was called the McIntosh Amphitheater and hosted the weekly McIntosh Opry, showcasing local and regional country and bluegrass music and clogging. In 1986, the programming expanded to include oldies and performances by the Atlanta Pops Orchestra.</p>
+        <p>In 1989, a fire damaged the facility, closing the amphitheater temporarily. In 1991, the amphitheater reopened after renovations and was then renamed after former mayor Frederick Brown, Jr. It has since then been used as a concert venue for national and international touring acts.</p>
         <p>
-            <img src="Resources/Images/panda.png" alt="" title="" />
+            <img src="Resources/Images/PTC/Fred.jpg" style="width: 505px;height: 378px;" />
         </p>
-        <p>Petco Park is home to the San Diego Padres, the city's Major League Baseball franchise. The stadium was built in 2004 and is located in downtown San Diego. </p>
-        <p>
-            <img src="Resources/Images/petcopark.png" alt="" title="" />
-        </p>
+        <p>Flat Creek Nature Area is a 513-acre wetland in Peachtree City that extends 3.5 miles along Flat Creek. Southern Conservation Trust has installed a mulch trail, a 1200-foot boardwalk and two viewing platforms with benches. You can reach the boardwalk via the nature trail starting beside “The Fred” Amphitheater or from the Peachtree City cart path. Your walk reveals trees and plants typical of a Piedmont forested wetland, and numbered markers on the boardwalk indicate tree species. An additional viewing platform sits beside the cart path south of Crosstown Road. Line Creek Nature Area is a 70-acre public preserve along Line Creek in Peachtree City. This popular area offers a mix of habitats like an upland hardwood forest, granite outcroppings and a rushing stream bordered by native azaleas. Visitors will enjoy a fishing dock on a small pond, a gazebo and several miles of nature trails.</p>
+        <p> <img src="Resources/Images/PTC/Flat2.jpg" style="width: 448px;height: 336px;" /></p>
     </body>
 </html>
