--- a/Content/WhyPickPeachtree.htm
+++ b/Content/WhyPickPeachtree.htm
@@ -16,6 +16,7 @@
                 <MadCap:dropDownHotspot>Why peachtree</MadCap:dropDownHotspot>
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
+                <p>Peachtree City is an award-winning master planned community located just south of Atlanta, Georgia.  Founded in 1959, the city is home to a diverse population and provides the best in residential areas, commercial areas and community services to its citizens.</p>
                 <p>Peachtree City is the perfect combination of everything you could ever want! Beautiful scenery, 4 seasons, and good ole' Southern Hospitality is what we are known and proud of. Read through this document and see why you should Pick Peachtree City, GA&#160;as your next place of residence!</p>
                 <h1>Details</h1>
                 <p>Peachtree City has all 4 seasons. Read about it here.</p>
