--- a/Content/Home.htm
+++ b/Content/Home.htm
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
         <link href="Resources/Stylesheets/StylesForHomePage.css" rel="stylesheet" type="text/css" />
@@ -8,8 +8,8 @@
             <div>
                 <div class="HomeHeroSection">
                     <div class="centered-text">
-                        <h1 class="whiteheader">All About San Diego
-						</h1>
+                        <h1 class="whiteheader">Why Pick Peachtree?<![CDATA[
+						]]></h1>
                         <h2 class="whiteheader">The Place to Find Information about America's Finest City</h2>
                     </div>
                 </div>
@@ -20,13 +20,13 @@
                 <div class="left-section">
                     <div class="left-content">
                         <h2 class="SubCenter">Welcome</h2>
-                        <p>San Diego is a beautiful place to live, work, and visit. This guide will introduce you to America's Finest City.</p>
+                        <p>Peachtree City is a beautiful place to live, work, and visit. This guide will introduce you to America's Finest City.</p>
                         <p>In this guide, you will learn about:</p>
                         <ul class="mc-bullets">
-                            <li>San Diego history</li>
+                            <li>Peachtree City history</li>
                             <li>Local attractions</li>
-                            <li>Delicious food and drink</li>
-                            <li>Famous San Diegans</li>
+                            <li>Delicious dining options</li>
+                            <li>Golf Carts</li>
                         </ul>
                         <p>Take look around and get to know us! We're glad you stopped by.</p>
                     </div>
