Commit of Content/Dining.htm,Content/GolfCarts.htm,Content/PTCAttractions.htm,Content/Resources/Images/PTC/Kart.JPG,Content/Resources/Images/PTC/KartTraffic.jpg,Content/Resources/Images/PTC/MUSkart.jpg,Content/Resources/Images/PTC/Wart.jpg

--- a/Content/GolfCarts.htm
+++ b/Content/GolfCarts.htm
@@ -16,9 +16,20 @@
                 <p>100-mile network of multi-use paths for pedestrians, cyclists, and golf carts. Residents can go from neighborhood to shopping centers, schools, and parks through the wooded scenery that makes Peachtree City special.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <h2 MadCap:conditions="Default.PrintOnly">
-            <object src="https://www.youtube.com/watch?v=uJltcP2ckWE" style="width: 560px;height: 315px;">
+        <h2 MadCap:conditions="Default.ScreenOnly">Check out this virtual tour of Peachtree City's Famous Golf Cart Paths!</h2>
+        <h2 MadCap:conditions="Default.ScreenOnly">
+            <object src="https://www.youtube.com/watch?v=uJltcP2ckWE" style="width: 539px;height: 321px;">
             </object>
         </h2>
+        <p>Here are some more pictures of Golf Carts!</p>
+        <p>
+            <img src="Resources/Images/PTC/Kart.JPG" style="width: 535px;height: 535px;" />
+        </p>
+        <p>
+            <img src="Resources/Images/PTC/MUSkart.jpg" style="width: 535px;height: 301px;" />
+        </p>
+        <p>
+            <img src="Resources/Images/PTC/KartTraffic.jpg" style="width: 531px;height: 398px;" />
+        </p>
     </body>
 </html>
