--- a/Content/Dining.htm
+++ b/Content/Dining.htm
@@ -13,7 +13,7 @@
                 <MadCap:dropDownHotspot>The Beirut</MadCap:dropDownHotspot>
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Lebanese Restaurant</p>
+                <p>Ranked as the Number One ranked restaurant&#160;on TripAdvisor; the Beirut, a Lebanese Restaurant, without a doubt deserves its due praise. The Beirut offers a variety of Mediterranean, Lebanese, and Middle Eastern dishes. This is a great spot for both lunch and dinner options. The experience is unforgettable, so make sure to check out this spot if you're in town! </p>
                 <p>
                     <img src="Resources/Images/PTC/Beirut.jpg" />
                 </p>
@@ -25,7 +25,7 @@
                 <MadCap:dropDownHotspot>Grazing here</MadCap:dropDownHotspot>
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Barn-inspired eatery &amp; bar serving burgers from grass-fed beef &amp;&#160;featuring regular live music.</p>
+                <p>The Grazing Here is a barn-inspired eatery &amp; bar that serves burgers from grass-fed beef. Customers are able to order from a menu or decide to create their own burgerpiece (burger + masterpiece). If that isn’t enough, the Grazing Here regularly features live music regularly. </p>
                 <p>
                     <img src="Resources/Images/1121181421.jpg" style="width: 473px;height: 265px;" />
                 </p>
@@ -37,7 +37,7 @@
                 <MadCap:dropDownHotspot>The Georgia Shrimp company</MadCap:dropDownHotspot>
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Southern-tinged seafood dishes served in a low-key space with live music &amp; a bar with a tapas menu.</p>
+                <p>The Georgia Shrimp Company is known for its southern-tinged seafood dishes served in a low-key space. This is the best option when considering diving into the seafood scene in Peachtree City. With live music and a bar with a tapas menu, The Georgia Shrimp Company sure is a catch!</p>
                 <p>
                     <img src="Resources/Images/PTC/Shrimp.jpg" style="width: 575px;height: 380px;" />
                 </p>
