Commit of Content/GolfCarts.htm,Content/PTCAttractions.htm,Content/WhyPickPeachtree.htm

--- a/Content/GolfCarts.htm
+++ b/Content/GolfCarts.htm
@@ -6,6 +6,8 @@
     <body>
         <h1>Golf Carts?</h1>
         <p>Yes, golf carts.... a lot of them actually!</p>
+        <p>Peachtree City might as well be known as the golf cart capital of the world! Golf carts are used for more than just the many golfcources in the area. For some, these electricity powered vehicles are the primary means of transportation. It is quite common to run errands, visit friends/family, and even go to school in golf carts! There are pathways and even parking spots that are golf cart specific. They are incredibly convenient and help save on gas money! </p>
+        <p>Yes it may be a foreign concept, but this place actually exists and they LOVE&#160;their golfcarts!</p>
         <p>
             <img src="Resources/Images/PTC/Bridge.jpg" style="width: 560px;height: 420px;" />
         </p>
