--- a/Content/PTCAttractions.htm
+++ b/Content/PTCAttractions.htm
@@ -7,22 +7,20 @@
         <h1>Peachtree City&#160;Attractions</h1>
         <p>There are many places to visit in Peachtree City. Three of these are Lake Peachtree, the Fredrick Brown Jr. Amphitheater, and Flat Creek Nature Area.</p>
         <p style="font-weight: bold;font-style: normal;">Lake Peachtree</p>
-        <p>Lake Peachtree is located in the heart of Peachtree City. Being that it is located in the heart of the city It makes it hard to miss for both visitors and residence alike. For years this lake has and continues to be an important landmark for the community.</p>
-        <p>In fact, it has been over 50 years since the lake was created by damming up flat creek. The dam was officially completed and the lake began to fill in 1957. Back then Peachtree City was just getting started. In fact, it wasn't even chartered yet. That happened on March 9, 1959.</p>
+        <p>Lake Peachtree is located in the heart of Peachtree City. With it being in the heart, it is a main attraction for both residents and visitors. It is a terrific place to take a walk or cruise around on a golf cart. With its amazing foliage, Lake Peachtree is the place to be for a relaxing day around nature. </p>
         <p>
             <img src="Resources/Images/PTC/Lake Peachtree.jpg" style="width: 460px;height: 306px;" />
         </p>
         <p>&#160;</p>
         <p style="font-weight: bold;font-style: normal;">The Fredrick Brown Jr. Amphitheater</p>
-        <p>The Fred was initially built in 1976 under the McIntosh Trail Arts Council as a 1,600-seat outdoor facility to show “The McIntosh Trail,” a play written by Dr. Kermit H. Hunter that told the story of the death of Chief William McIntosh.</p>
-        <p>The City of Peachtree City purchased the amphitheater in 1977. Up until the mid 80’s, the amphitheater was called the McIntosh Amphitheater and hosted the weekly McIntosh Opry, showcasing local and regional country and bluegrass music and clogging. In 1986, the programming expanded to include oldies and performances by the Atlanta Pops Orchestra.</p>
-        <p>In 1989, a fire damaged the facility, closing the amphitheater temporarily. In 1991, the amphitheater reopened after renovations and was then renamed after former mayor Frederick Brown, Jr. It has since then been used as a concert venue for national and international touring acts.</p>
+        <p>If you have interest in the Arts, the Fred is the place to be! The Fredrick Brown Jr. Amphitheater has been hosting events since 1976. In fact, the very first play ever shown in the Fred was "The McIntosh Trail". Currently the amphitheater is used as a concert venue for national and international touring acts.</p>
+        <p>This 1,6000-seat outdoor facility is guaranteed to be a good time! Make sure to look out for future concert dates at the Fredrick Brown Jr. Amphitheater!</p>
         <p>
             <img src="Resources/Images/PTC/Fred.jpg" style="width: 505px;height: 378px;" />
         </p>
         <p>&#160;</p>
         <p style="font-weight: bold;font-style: normal;">Flat Creek Nature Area</p>
-        <p>Flat Creek Nature Area is a 513-acre wetland in Peachtree City that extends 3.5 miles along Flat Creek. Southern Conservation Trust has installed a mulch trail, a 1200-foot boardwalk and two viewing platforms with benches. You can reach the boardwalk via the nature trail starting beside “The Fred” Amphitheater or from the Peachtree City cart path. Your walk reveals trees and plants typical of a Piedmont forested wetland, and numbered markers on the boardwalk indicate tree species. An additional viewing platform sits beside the cart path south of Crosstown Road. Line Creek Nature Area is a 70-acre public preserve along Line Creek in Peachtree City. This popular area offers a mix of habitats like an upland hardwood forest, granite outcroppings and a rushing stream bordered by native azaleas. Visitors will enjoy a fishing dock on a small pond, a gazebo and several miles of nature trails.</p>
+        <p>Flat Creek Nature Area is a 513-acre wetland in Peachtree City that extends 3.5 miles along Flat Creek. Flat Creek also has a 1200-foot boardwalk where you can walk with nature! There are also viewing platforms and benches for those who wish to slow down and take in the Area's beauty. Many people ask, "Is Flat Creek Nature Area Golf Cart accessible?", and the answer is yes!&#160;Not all of the area is accessible by golf cart, but you can find a parking spot and begin your adventure by foot if you want the entire experience. </p>
         <p> <img src="Resources/Images/PTC/Flat2.jpg" style="width: 448px;height: 336px;" /></p>
     </body>
 </html>
