--- a/Content/WhyPickPeachtree.htm
+++ b/Content/WhyPickPeachtree.htm
@@ -16,10 +16,10 @@
                 <MadCap:dropDownHotspot>Why peachtree</MadCap:dropDownHotspot>
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Peachtree City is an award-winning master planned community located just south of Atlanta, Georgia.  Founded in 1959, the city is home to a diverse population and provides the best in residential areas, commercial areas and community services to its citizens.</p>
-                <p>Peachtree City is the perfect combination of everything you could ever want! Beautiful scenery, 4 seasons, and good ole' Southern Hospitality is what we are known and proud of. Read through this document and see why you should Pick Peachtree City, GA&#160;as your next place of residence!</p>
-                <p MadCap:conditions="Default.PrintOnly">Clip this coupon for a discount.</p>
-                <p MadCap:conditions="Default.ScreenOnly">Show this page on your smartphone for a discount.</p>
+                <p>Peachtree City is an award-winning  community located just ~30 minutes south of Atlanta, Georgia.  Founded in 1959, the city is home to a diverse population and provides the best in residential areas, commercial areas and community services to its citizens (www.peachtree-city.org)</p>
+                <p>Peachtree City is the perfect combination of everything you could ever want! Beautiful scenery, 4 distinct seasons, and good ole' Southern Hospitality is what we are known and proud of. Read through this document and see why you should Pick Peachtree City, GA&#160;as your next place of residence!</p>
+                <p MadCap:conditions="Default.ScreenOnly">Check out the Official Website of Peachtree City, GA below!</p>
+                <p MadCap:conditions="Default.ScreenOnly">http://www.peachtree-city.org/</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
     </body>
