Formatting and finishing touches

--- a/Content/Dining.htm
+++ b/Content/Dining.htm
@@ -15,7 +15,7 @@
             <MadCap:dropDownBody>
                 <p>Ranked as the Number One ranked restaurant&#160;on TripAdvisor; the Beirut, a Lebanese Restaurant, without a doubt deserves its due praise. The Beirut offers a variety of Mediterranean, Lebanese, and Middle Eastern dishes. This is a great spot for both lunch and dinner options. The experience is unforgettable, so make sure to check out this spot if you're in town! </p>
                 <p>
-                    <img src="Resources/Images/PTC/Beirut.jpg" />
+                    <img src="Resources/Images/PTC/Beirut.jpg" style="width: 385px;height: 512px;" />
                 </p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
